# gr-ieee802-15-4

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  MANIFEST.md  Makefile.common  README  README.md  configure.ac
.conda/: README.md
contiki/: sdr.c  (+3 more)
examples/: CMakeLists.txt  SHCS_MAC_SU.grc  SHCS_MAC_SUC.grc  ber_awgn_comp_css_script.py  ber_awgn_comp_oqpsk_script.py  ber_awgn_perf_comp_nogui.grc  css_oqpsk_perf_comp.grc  ieee802_15_4_CSS_PHY.grc  ieee802_15_4_CSS_PHY_HD.grc  ieee802_15_4_CSS_PHY_NOSYNC.grc  ieee802_15_4_CSS_PHY_SD.grc  ieee802_15_4_CSS_PHY_rx_only.grc  ieee802_15_4_CSS_PHY_tx_only.grc  ieee802_15_4_OQPSK_PHY.grc  ieee802_15_4_OQPSK_PHY_NOSYNC.grc  ieee802_15_4_PHY.grc  ieee802_15_4_SUN_FSK.grc  ieee802_15_4_css_phy.block.yml  ieee802_15_4_oqpsk_phy.block.yml  loopback.grc  rx.grc  transceiver.grc  transceiver_CSS.grc  transceiver_CSS_USRP.grc  transceiver_CSS_loopback.grc  transceiver_OQPSK.grc  transceiver_OQPSK_wSHCS_MAC.grc  transceiver_css.grc  tx.grc
examples/awgn/: ber_awgn_comp_css_script.py  ber_awgn_comp_oqpsk_script.py  combine_awgn_ber_curves.py  cssfast1.npy  cssfast2.npy  cssslow1.npy  oqpsk.npy
examples/awgn/results/: ber_awgn_css_slow_rate-True_-30.0_to_-11.0dB_2014-12-04_14-13-13.npy  ber_awgn_oqpsk_-30.0_to_-1.0dB_2014-12-04_13-31-41.npy
examples/css_self_interference/: combine_css_self_interference.py  css_self_interference_test.grc  css_self_interference_test_gui.grc  ieee802_15_4_css_phy_self_interference_script.py
examples/css_self_interference/results/: ber_self_interference_css_slow_rate-False_-25.0_to_-5.5dB_2014-12-03_14-07-00.npy  ber_self_interference_css_slow_rate-True_-25.0_to_-10.5dB_2014-12-03_15-48-06.npy
examples/rayleigh_multipath/: ber_rayleigh_css_script.py  ber_rayleigh_oqpsk_script.py  combine_rayleigh_ber_curves.py  notes.txt
examples/rayleigh_multipath/results/: ber_rayleigh_css_sd_slow_rate-True_-25.0_to_14.0dB_2014-12-04_00-46-04.npy
examples/simulations/awgn/: ber_awgn_comp_css_script.py  ber_awgn_comp_oqpsk_script.py  combine_awgn_ber_curves.py  per_awgn_css_script.py  per_awgn_oqpsk_script.py  plot_ber_awgn_curves.py  plot_per_awgn_curves.py
examples/singletone_interferer/: combine_singletone_curves.py  singletone_frequency_all_phy.py  singletone_interferer_css_script.py  singletone_interferer_oqpsk_script.py
grc/: CMakeLists.txt  ieee802_15_4_access_code_prefixer.xml  ieee802_15_4_access_code_removal_b.xml  ieee802_15_4_chips_to_bits_fb.xml  ieee802_15_4_chirp_detector_cc.xml  ieee802_15_4_codeword_demapper_ib.xml  ieee802_15_4_codeword_mapper_bi.xml  ieee802_15_4_codeword_soft_demapper_fb.xml  ieee802_15_4_compare_blobs.xml  ieee802_15_4_costas_loop_cc.xml  ieee802_15_4_crc_16.xml  ieee802_15_4_css_phr_prefixer.xml  ieee802_15_4_deinterleaver_ff.xml  ieee802_15_4_dqcsk_demapper_cc.xml  ieee802_15_4_dqcsk_demapper_cf.xml  ieee802_15_4_dqcsk_mapper_fc.xml  ieee802_15_4_dqpsk_mapper_ff.xml  ieee802_15_4_dqpsk_soft_demapper_cc.xml  ieee802_15_4_fragmentation.xml  ieee802_15_4_frame_buffer_cc.xml  ieee802_15_4_interleaver_ii.xml  ieee802_15_4_mac.xml  ieee802_15_4_mac_deframer.xml  ieee802_15_4_mac_framer.xml  ieee802_15_4_make_pair_with_blob.xml  ieee802_15_4_matched_filter_ff.xml  ieee802_15_4_multiuser_chirp_detector_cc.xml  ieee802_15_4_packet_sink.xml  ieee802_15_4_pdu_wrapper.xml  ieee802_15_4_phr_prefixer.xml  ieee802_15_4_phr_prefixer_c.xml  ieee802_15_4_phr_removal.xml  ieee802_15_4_pn9_whitener.xml  ieee802_15_4_preamble_detection_cc.xml  ieee802_15_4_preamble_sfd_prefixer_ii.xml  ieee802_15_4_preamble_tagger_cc.xml  ieee802_15_4_qpsk_demapper_fi.xml  ieee802_15_4_qpsk_mapper_if.xml  ieee802_15_4_qpsk_modulator.xml  ieee802_15_4_rayleigh_multipath_cc.xml  (+12 more)
include/ieee802_15_4/: CMakeLists.txt  access_code_prefixer.h  access_code_removal_b.h  api.h  chips_to_bits_fb.h  chirp_detector_cc.h  codeword_demapper_ib.h  codeword_mapper_bi.h  codeword_soft_demapper_fb.h  compare_blobs.h  costas_loop_cc.h  crc_16.h  css_phr_prefixer.h  deinterleaver_ff.h  dqcsk_demapper_cc.h  dqcsk_demapper_cf.h  dqcsk_mapper_fc.h  dqpsk_mapper_ff.h  dqpsk_soft_demapper_cc.h  fragmentation.h  frame_buffer_cc.h  interleaver_ii.h  mac.h  make_pair_with_blob.h  matched_filter_ff.h  multiuser_chirp_detector_cc.h  packet_sink.h  pdu_wrapper.h  phr_prefixer.h  phr_prefixer_c.h  phr_removal.h  pn9_whitener.h  preamble_detection_cc.h  preamble_sfd_prefixer_ii.h  preamble_tagger_cc.h  qpsk_demapper_fi.h  qpsk_mapper_if.h  rayleigh_multipath_cc.h  rime_stack.h  shcs_mac.h  (+6 more)
lib/: CMakeLists.txt  access_code_prefixer.cc  access_code_removal_b_impl.cc  access_code_removal_b_impl.h  bc_connection.h  chips_to_bits_fb_impl.cc  chips_to_bits_fb_impl.h  chirp_detector_cc_impl.cc  chirp_detector_cc_impl.h  codeword_demapper_ib_impl.cc  codeword_demapper_ib_impl.h  codeword_mapper_bi_impl.cc  codeword_mapper_bi_impl.h  codeword_soft_demapper_fb_impl.cc  codeword_soft_demapper_fb_impl.h  compare_blobs_impl.cc  compare_blobs_impl.h  costas_loop_cc_impl.cc  costas_loop_cc_impl.h  crc_16_impl.cc  crc_16_impl.h  css_phr_prefixer_impl.cc  css_phr_prefixer_impl.h  deinterleaver_ff_impl.cc  deinterleaver_ff_impl.h  dqcsk_demapper_cc_impl.cc  dqcsk_demapper_cc_impl.h  dqcsk_demapper_cf_impl.cc  dqcsk_demapper_cf_impl.h  dqcsk_mapper_fc_impl.cc  dqcsk_mapper_fc_impl.h  dqpsk_mapper_ff_impl.cc  dqpsk_mapper_ff_impl.h  dqpsk_soft_demapper_cc_impl.cc  dqpsk_soft_demapper_cc_impl.h  fragmentation_impl.cc  fragmentation_impl.h  frame_buffer_cc_impl.cc  frame_buffer_cc_impl.h  interleaver_ii_impl.cc  (+66 more)
python/bindings/: CMakeLists.txt  python_bindings.cc
src/lib/: .cvsignore  Makefile.am  ucla.i  ucla_cc1k_correlator_cb.cc  ucla_cc1k_correlator_cb.h  ucla_delay_cc.cc  ucla_delay_cc.h  ucla_ieee802_15_4_packet_sink.cc  ucla_ieee802_15_4_packet_sink.h  ucla_interleave.cc  ucla_interleave.h  ucla_manchester_ff.cc  ucla_manchester_ff.h  ucla_multichanneladd_cc.cc  ucla_multichanneladd_cc.h  ucla_qpsk_modulator_cc.cc  ucla_qpsk_modulator_cc.h  ucla_sos_packet_sink.cc  ucla_sos_packet_sink.h  ucla_symbols_to_chips_bi.cc  ucla_symbols_to_chips_bi.h
(+186 files in other folders)
